# codekata_old

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  codekata_db.sqlite  codekata_db.sqlite.blank  codekata_db.sqlite.sample  db.sqlite  sample_db_create.sql
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: ApiGen.tsx  App.tsx  AuthRequired.tsx  EditUser.tsx  Games.tsx  Gomoku.tsx  Header.css  Header.tsx  LogIn.tsx  Page.tsx  SignUp.tsx  api.ts  flex.css  form.css  games.css
migrations/2020-09-22-214857_create_games/: down.sql  up.sql
migrations/2020-09-25-153646_create_users/: up.sql
migrations/2020-10-11-000807_create_tournament/: down.sql  up.sql
migrations/2020-10-11-001632_add_is_public_to_db_games/: down.sql  up.sql
migrations/2020-10-19-051952_create_pages/: up.sql
migrations/2020-10-19-052625_add_is_admin_to_users/: down.sql  up.sql
src/: game.rs  game_manage.rs  gomoku.rs  main.rs  models.rs  pages.rs  run_migrations.rs  schema.rs  shared.rs  tic_tac_toe.rs  users.rs
static/: login.html
