[package]
name = "codekata"
version = "0.1.0"
authors = ["edwardwawrzynek <edward@wawrzynek.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
uuid = { version = "0.4", features = ["v4"] }
sha2 = "0.9.1"
dotenv = "0.10"
diesel = {version = "1.4.5", default_features = false, features=["postgres"] }
diesel_migrations = "1.4.0"
itertools = "0.9.0"
bcrypt = "0.8.2"
time = "0.2.22"
rocket_cors = "0.5.2"